# chatqt

./: .gitignore  .gitmodules  CMakeLists.txt  CServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  README.md  main.cpp  server_qt.sln  server_qt.vcxproj  server_qt.vcxproj.filters
VarifyServer/: config.js  config.json  package-lock.json  package.json  proto.js  server.js
backend/src/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  RedisMgr.cpp  RedisMgr.h  Singleton.h  VerifyGrpcClient.h  config.ini  connections_found_report.txt  connections_search_report.txt  const.h  grpc_config.props  main.cpp  namespace_analysis_report.txt
frontend/lifchatc_new/: CMakeLists.txt  config.ini  global.cpp  global.h  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  method_three_implementation.txt  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h
frontend/qqs/: global.cpp  httpmgr.cpp  mainwindow.h  registerdialog.cpp
frontend/src/qqs/: CMakeLists.txt  logindialog.ui  mainwindow.ui  rc.qrc  registerdialog.h
server_qt/x64/Debug/: server_qt.exe.recipe  vc143.idb
server_qt/x64/Debug/server_qt.tlog/: server_qt.lastbuildstate
